--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -15,7 +15,7 @@
 <body>
 	<h2><a href="../">&#9884;</a> Javascript Benchmark</h1>
 	<details>
-		<summary>templates and examples &#x1f3e0;</summary>
+		<summary>templates and examples</summary>
 		<li><a href="./index.html#7hJ)/8GQ+ExJfWvkYWW=uxSsKc2Lbv&T.e+~N1AzL86I/ztyianBhj)*'NqGl&~8eeDN?,u@7I*)B)yv;Q5be2pSsx@;;G_6s4*rDZO&4tvAJqiid:b0mm$GxrZonHE9lm-:vzhua/jtNl0*,J8.f~O2=Jo(WP18uJvdmwWNu_fzu_WAAV?Xsvcw+Ze4TOV?iwS8,IKa_.36wHDxBO:'QVz29CMD5ils!s9p-;Nl3qik3.vB*3o7SZBL0Y$cudBW~FnDiM:um!;Li1*MrS+7:W=W&W7;PfO_d">
 			selecting a single element in a tree of 30
 		</a></li>
@@ -48,7 +48,7 @@
 	</tr>
 	<tr>
 		<th>code</th>
-		<th style="text-align: center; vertical-align: middle;">result</th>
+		<th style="text-align: center; vertical-align: middle;">result in nanoseconds Q25-Q75</th>
 	</tr>
 </thead>
 <tbody>
