--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
 	<meta charset=utf-8>
 	<meta name=viewport content="width=device-width, initial-scale=1.0">
 	<meta name=description content="schem.ist home">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
-	<style>
-		body {
-			max-width: initial;
-		}
-	</style>
+	<link rel="stylesheet" href="./_src/main.css">
 </head>
 <body>
 	<h2><a href="../">&#9884;</a> schem.ist</h1>
