--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -5,12 +5,7 @@
 	<meta charset=utf-8>
 	<meta name=viewport content="width=device-width, initial-scale=1.0">
 	<meta name=description content="in browser benchmarking">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
-	<style>
-		body {
-			max-width: initial;
-		}
-	</style>
+	<link rel="stylesheet" href="../_src/main.css">
 </head>
 <body>
 	<h2><a href="../">&#9884;</a> Javascript Benchmark</h1>
@@ -63,7 +58,7 @@
 	</tr>
 </template>
 <script type=module>
-	import {cast, list, frame, $} from 'https://cdn.skypack.dev/@hugov/inhtml'
+	import {cast, list, frame, $} from '../_src/inhtml.js'
 	import {enc, dec, QUERY} from 'https://cdn.skypack.dev/@hugov/shorter-string'
 
 	const init = $('#init'),
