--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
 	<meta name=viewport content="width=device-width, initial-scale=1.0">
 	<meta name=description content="schem.ist home">
 	<link rel="stylesheet" href="./_src/main.css">
+	<script type=module src="../_src/lang-pick.js"></script>
 </head>
 <body>
-	<h2><a href="../">&#9884;</a> schem.ist</h1>
-	<blockquote>misc. experiments and code</blockquote>
-	<a href="./publicbench/">publicbench</a> a no frils simple benchmark app with in-URL saving and loading
+	<div style="display: flex; justify-content: space-between;">
+		<h2><a href="../">&#9884;</a> schem.ist</h2>
+		<lang-pick>en fr</lang-pick>
+	</div>
+	<hr>
+	<blockquote data-lang>misc. experiments and code // petits projets divers</blockquote>
+	<ul>
+		<li>2021-05-08 <span data-lang>language selector // interface multilingue avec selecteur</span></li>
+		<li>2021-05-05
+			<span data-lang>
+				<span lang=en>a no frills <a href="./publicbench/">benchmark</a> app with in-URL saving and loading</span>
+				<span lang=fr><a href="./publicbench/">banc d'essais</a> de performance avec chargement et sauvegarde par signet URI</span>
+			</span>
+		</li>
+	</ul>
 </body>
 </html>
