--- a/multilingue/index.html
+++ b/multilingue/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
-<html lang=en data-lang="fr en es">
+<html lang=en>
 <head>
 	<title>schem.ist</title>
 	<meta charset=utf-8>
 	<meta name=viewport content="width=device-width, initial-scale=1.0">
 	<meta name=description content="schem.ist home">
 	<link rel="stylesheet" href="../_src/main.css">
+	<script type=module src="../_src/lang-pick.js"></script>
 </head>
 <body>
 	<div style="display: flex; justify-content: space-between;">
 		<span>Left</span>
-		<span id=pikl></span>
+		<lang-pick>es en fr</lang-pick>
 	</div>
 	<hr>
 
@@ -23,10 +24,5 @@
 		<p lang=en>it would be naïve to think there is not an ångström of diacritics</p>
 		<p lang=es>pingüino, piñata, química, cuestión</p>
 	</div>
-
-	<script type=module>
-		import pick from '../_src/lang-form.js'
-		document.getElementById('pikl').append(pick('es fr en'))
-	</script>
 </body>
 </html>
