--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<hr>
 	<blockquote data-lang>misc. experiments and code // petits projets divers</blockquote>
 	<ul>
-		<li>2021-05-08 <span data-lang>language selector // interface multilingue avec selecteur</span></li>
-		<li>2021-05-05
+		<li><time>2021-05-08</time> <span data-lang>language selector // interface multilingue avec selecteur</span></li>
+		<li><time>2021-05-05</time>
 			<span data-lang>
 				<span lang=en>a no frills <a href="./publicbench/">benchmark</a> app with in-URL saving and loading</span>
 				<span lang=fr><a href="./publicbench/">banc d'essais</a> de performance avec chargement et sauvegarde par signet URI</span>
