--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -7,24 +7,29 @@
 	<meta name=description content="in browser benchmarking">
 	<link rel="stylesheet" href="../_src/main.css">
 </head>
+
 <body>
-	<h2><a href="../">&#9884;</a> Javascript Benchmark</h1>
-	<details>
-		<summary>templates and examples</summary>
-		<li><a href="./index.html#7hJ)/8GQ+ExJfWvkYWW=uxSsKc2Lbv&T.e+~N1AzL86I/ztyianBhj)*'NqGl&~8eeDN?,u@7I*)B)yv;Q5be2pSsx@;;G_6s4*rDZO&4tvAJqiid:b0mm$GxrZonHE9lm-:vzhua/jtNl0*,J8.f~O2=Jo(WP18uJvdmwWNu_fzu_WAAV?Xsvcw+Ze4TOV?iwS8,IKa_.36wHDxBO:'QVz29CMD5ils!s9p-;Nl3qik3.vB*3o7SZBL0Y$cudBW~FnDiM:um!;Li1*MrS+7:W=W&W7;PfO_d">
-			selecting a single element in a tree of 30
-		</a></li>
-		<li><a href="./index.html#dYpY-Fae5f@sm@_ed7VOp)h1&cL@bvU+aVVJ?ho6P4Qs7_wpTIG?ljd2OQ=7lsJ7C;J-E57eh~@dxHm~=@L)=RI@qwtiSI$pwmNClu,,ZKeDHdTEA(Zt*Qs5f*jYQmrF(N*eE_@IAKc)NbHU!:hU-dUf*:9X$S+M/cc==u;tk@9d!D6CI5=a7CAUfnHmCDXqO:F.kDkI&s:+cI*7fM0NIgM91$C8v_a+:M!.r)Fi&Pb~jM&OLoKB67D1Em*cch2UYErgG!Et9/IY!(+='!S1Vy*ro.6hk@Tn?hTJd;*/ws4ba)aKzux,;Hh(-~1">
-			selecting elements in a tree of 30
-		</a></li>
-		<!--
-			TODO https://www.toptal.com/designers/htmlarrows/symbols/
-			lang=en-US
-			on save/load extra params - lang,version,...
-			dwld key files from cdn
-		 -->
-	</details>
+
+<h2><a href="../">&#9884;</a> Javascript Benchmark</h1>
+
+<details>
+	<summary>templates and examples</summary>
+	<li><a href="./index.html#7hJ)/8GQ+ExJfWvkYWW=uxSsKc2Lbv&T.e+~N1AzL86I/ztyianBhj)*'NqGl&~8eeDN?,u@7I*)B)yv;Q5be2pSsx@;;G_6s4*rDZO&4tvAJqiid:b0mm$GxrZonHE9lm-:vzhua/jtNl0*,J8.f~O2=Jo(WP18uJvdmwWNu_fzu_WAAV?Xsvcw+Ze4TOV?iwS8,IKa_.36wHDxBO:'QVz29CMD5ils!s9p-;Nl3qik3.vB*3o7SZBL0Y$cudBW~FnDiM:um!;Li1*MrS+7:W=W&W7;PfO_d">
+		selecting a single element in a tree of 30
+	</a></li>
+	<li><a href="./index.html#dYpY-Fae5f@sm@_ed7VOp)h1&cL@bvU+aVVJ?ho6P4Qs7_wpTIG?ljd2OQ=7lsJ7C;J-E57eh~@dxHm~=@L)=RI@qwtiSI$pwmNClu,,ZKeDHdTEA(Zt*Qs5f*jYQmrF(N*eE_@IAKc)NbHU!:hU-dUf*:9X$S+M/cc==u;tk@9d!D6CI5=a7CAUfnHmCDXqO:F.kDkI&s:+cI*7fM0NIgM91$C8v_a+:M!.r)Fi&Pb~jM&OLoKB67D1Em*cch2UYErgG!Et9/IY!(+='!S1Vy*ro.6hk@Tn?hTJd;*/ws4ba)aKzux,;Hh(-~1">
+		selecting elements in a tree of 30
+	</a></li>
+	<!--
+		TODO https://www.toptal.com/designers/htmlarrows/symbols/
+		lang=en-US
+		on save/load extra params - lang,version,...
+		dwld key files from cdn
+		-->
+</details>
+
 <table>
+<!-- TODO table caption ? -->
 <colgroup>
 	<col style="width:70%;">
 	<col>
@@ -46,8 +51,9 @@
 		<th style="text-align: center; vertical-align: middle;">result in nanoseconds Q25-Q75</th>
 	</tr>
 </thead>
-<tbody>
-</tbody>
+
+<tbody></tbody>
+
 </table>
 <template>
 	<tr id=row>
