--- a/index.html
+++ b/index.html
@@ -8,21 +8,37 @@
 	<link rel="stylesheet" href="./_src/main.css">
 	<script type=module src="../_src/lang-pick.js"></script>
 </head>
+
 <body>
-	<div style="display: flex; justify-content: space-between;">
-		<h2><a href="../">&#9884;</a> schem.ist</h2>
-		<lang-pick>en fr</lang-pick>
-	</div>
-	<hr>
-	<blockquote data-lang>misc. experiments and code // petits projets divers</blockquote>
-	<ul>
-		<li><time>2021-05-08</time> <span data-lang>language selector // interface multilingue avec selecteur</span></li>
-		<li><time>2021-05-05</time>
-			<span data-lang>
-				<span lang=en>a no frills <a href="./publicbench/">benchmark</a> app with in-URL saving and loading</span>
-				<span lang=fr><a href="./publicbench/">banc d'essais</a> de performance avec chargement et sauvegarde par signet URI</span>
-			</span>
-		</li>
-	</ul>
+
+<div style="display: flex; justify-content: space-between;">
+	<h2><a href="../">&#9884;</a> schem.ist</h2>
+	<lang-pick>en fr</lang-pick>
+</div>
+<hr>
+<blockquote data-lang>misc. experiments and code // petits projets divers</blockquote>
+<ul>
+	<li><time>2021-05-08</time> <span data-lang>language selector // interface multilingue avec selecteur</span></li>
+	<li><time>2021-05-05</time>
+		<span data-lang>
+			<span lang=en>a no frills <a href="./publicbench/">benchmark</a> app with in-URL saving and loading</span>
+			<span lang=fr><a href="./publicbench/">banc d'essais</a> de performance avec chargement et sauvegarde par signet <abbr>URI</abbr></span>
+		</span>
+	</li>
+</ul>
+
+
+<footer>
+	<address>
+		<a href="geo:45.5,-73.6;u=5000" style="pointer-events: none">Montréal</a><br>
+		<a href="mailto:hugov@runbox.com">hugov@runbox.com</a><br>
+		🏗 <a href="https://www.linkedin.com/in/hugovilleneuve/">linkedin.com/in/hugovilleneuve</a><br>
+		💻 <a href="https://github.com/hville">github.com/hville</a>
+	</address>
+</footer>
+
 </body>
 </html>
+
+
+
