contenteditable and lang fixes

--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -6,26 +6,28 @@
 	<meta name=viewport content="width=device-width, initial-scale=1.0">
 	<meta name=description content="in browser benchmarking">
 	<link rel="stylesheet" href="../_src/main.css">
+	<script type=module src="../_src/lang-pick.js"></script>
 </head>
 
 <body>
 
-<h2><a href="../">&#9884;</a> Javascript Benchmark</h1>
+<div style="display: flex; justify-content: space-between;">
+	<h2><a href="../">&#9884;</a> Javascript Benchmark</h1>
+	<lang-pick>en fr</lang-pick>
+</div>
+<hr>
 
 <details>
 	<summary>templates and examples</summary>
-	<li><a href="./index.html#7hJ)/8GQ+ExJfWvkYWW=uxSsKc2Lbv&T.e+~N1AzL86I/ztyianBhj)*'NqGl&~8eeDN?,u@7I*)B)yv;Q5be2pSsx@;;G_6s4*rDZO&4tvAJqiid:b0mm$GxrZonHE9lm-:vzhua/jtNl0*,J8.f~O2=Jo(WP18uJvdmwWNu_fzu_WAAV?Xsvcw+Ze4TOV?iwS8,IKa_.36wHDxBO:'QVz29CMD5ils!s9p-;Nl3qik3.vB*3o7SZBL0Y$cudBW~FnDiM:um!;Li1*MrS+7:W=W&W7;PfO_d">
+	<li><a href="./#en/12NBII,z8rZIDcox/+x1OzGgmj!pQxew@@ta8c&2y/oqh5F25Mg5yVKRQQKmbvLgY7zT8YcWg)pkS/6b.:'8DI4w+h'2.;8SvKOjGF&S*wz/Tq7C!hBr-Sq/husk2SvIwqVh,n&NRoEJZ~0I=5;(Yc/Y$9F,F4~XVarXDrmku2t0'E,P*j!PJ!t4KLNGzv&?4@uYWiGY1ZmE6.6S-H00681_&A*O,51oCw;_*!P114_T!hf@F@Kga@bZ@U;kK)AB/_8qFSzC:5HTQeakvh9~dVj:&6?S8sbjBG_R'*4mBg63ZC.L=!~8bC~w:-A'RVSk'UEvi@&HoFGv/dRcPSY5zgA~o.bHM:*aK8AK5Li-nErDIKJh464:&ilF)oxaWur3bvf5g(x1D@z2nL_QqCtVfwiC;JDx/zGx56,v/wO*RVQlR.u6Z">
 		selecting a single element in a tree of 30
 	</a></li>
-	<li><a href="./index.html#dYpY-Fae5f@sm@_ed7VOp)h1&cL@bvU+aVVJ?ho6P4Qs7_wpTIG?ljd2OQ=7lsJ7C;J-E57eh~@dxHm~=@L)=RI@qwtiSI$pwmNClu,,ZKeDHdTEA(Zt*Qs5f*jYQmrF(N*eE_@IAKc)NbHU!:hU-dUf*:9X$S+M/cc==u;tk@9d!D6CI5=a7CAUfnHmCDXqO:F.kDkI&s:+cI*7fM0NIgM91$C8v_a+:M!.r)Fi&Pb~jM&OLoKB67D1Em*cch2UYErgG!Et9/IY!(+='!S1Vy*ro.6hk@Tn?hTJd;*/ws4ba)aKzux,;Hh(-~1">
+	<li><a href="./#en/qOEDwCMgXfD-g@qf!&-B3D6pHsbAyl+yR1k)E&O;*!EkM&om7_enYWZEw2;:mIu9)Ij7/v1w,nLlJ8*Tyn=4*1GvsGtWb;Wd.74(RoR;&@Et,T:a7Z54R*LqlVl2ovlljMu:~G?QOjAOt1Q-67t$C)uf/V-okf@Hhv4VCq?(f9!9-yP@0=hFuvSducNvj!-A2-E@9+K0Gpu.gMmKLQgEZl49V2JkV5es=iGJ'v_86_Hg1!blcdNzM3by1@q6j$E~Rvyxniu/DSv1$?H$HLIjJNXc7fq4(TF2=65-5f76w3ZNH3$wgO(sqOebMqzgq3ch0cNE&ZIpy9@~rDyfk)!Pei$UQdeqG)8&!MIF;9=@W@8!2hy0.Zl5dlw6PHwjvV@3fW_bC2jsY'0sAms7EtgRLxg+.$Y92ZO@a'el9oGRp?4a)iG;l35*r,@s/HUZjqod*&ZT~1yGT">
 		selecting elements in a tree of 30
 	</a></li>
-	<!--
-		TODO https://www.toptal.com/designers/htmlarrows/symbols/
-		lang=en-US
-		on save/load extra params - lang,version,...
-		dwld key files from cdn
-		-->
+	<li><a href="./#en/gca.GqkJvWPFe,z=uGO$**AW,uXYv&d?5X8IT??-Z/;DxQxyq6E?3jH!MOMWmTCDL1/qvCIi;qBCR(wsO:Ya1y6qo*(YYm8l&uqMwjQ_..kA*2Ht_@fQCw6L=ro1-7k0LbJR(aR11b/d~=WS?&0=$F2Xn4WB9k&Bm?'rj6trSE,sKD@u~fWTRz-y(5pn$~jqNryvTO8_P*x;e@6F2D~.qL'!+8f0)A;S1DNs=,4b!cxY@zX$;0bJQ)G)9Gh~nZBIoLCDM5Xp*ie:bgdyC~N)fg0&9Tg4J83Q_W3">
+		iterating through object keys and values
+	</a></li>
 </details>
 
 <table>
@@ -63,67 +65,82 @@
 		<td id=time style="text-align: center; vertical-align: middle;"></td>
 	</tr>
 </template>
+
 <script type=module>
-	import {cast, list, frame, $} from '../_src/inhtml.js'
-	import {enc, dec, QUERY} from 'https://cdn.skypack.dev/@hugov/shorter-string'
 
-	const init = $('#init'),
-				tbody = $('tbody'),
-				rows = tbody.children
+import {cast, list, frame, $, $$} from '../_src/inhtml.js'
+import hashData from './hash-data.js'
 
-	// row factory
-	const makeRow = cast('template', ({row, code, time}, codeVal='') => {
-		code.textContent = codeVal
+const init = $('#init'),
+			tbody = $('tbody'),
+			rows = tbody.children,
+			hasEOL = /\n$/,
+			changed = new WeakSet
 
-		time.update = res => time.textContent = !res ? '' : res.IQR.map( v => v.toPrecision(3) ).join(' - ')
+// row factory
+const makeRow = cast('template', ({row, code, time}, codeVal='') => {
+	code.textContent = codeVal
 
-		code.oninput = function() {
-			time.textContent = ''
-			if (!this.textContent) row.remove()
-			if (this.textContent && !row.nextSibling) row.after(makeRow())
-			save()
-		}
-
-		row.$ids = {code, time}
-		return row
-	})
-
-	// simulation button handler
-	$('#run').onclick = () => {
-		const initCode = `import bench from 'https://cdn.skypack.dev/@hugov/bench@0.6.0';${ init.textContent };`
-		const execCode = `()=>bench([${
-			Array.from(rows).slice(0,-1).map( row => `function(){${row.$ids.code.textContent}}` ).join(',\n')
-		}])`
-		const sandbox = frame( execCode, initCode )
-		sandbox.run()
-		.then( res => Array.from(rows).forEach( ({$ids}, i) => $ids.time.update( res[i] ) ) )
-		.catch( err => console.log('error in test', err) )
-		.finally( () => sandbox.end() )
+	time.update = res => time.textContent = !res ? '' : res.IQR.map( v => v.toPrecision(3) ).join(' - ')
+	code.oninput = oninput
+	// to simulate onchange
+	code.onblur = () => {
+		if (!changed.delete(code)) return
+		time.textContent = ''
+		if (!code.textContent) row.remove()
+		if (code.textContent && !row.nextSibling) row.after(makeRow())
+		save()
 	}
 
-	// save data in hash
-	function save() {
-		//TODO language and options ?
-		const values = [init.textContent]
-		//get all rows but the last
-		for (let i=0; i<rows.length-1; ++i) values.push(rows[i].$ids.code.textContent)
-		location.hash = '#' + enc( values.join('\x00'), QUERY )
-	}
+	row.$ids = {code, time}
+	return row
+})
+function oninput(evt) {
+	const el = evt.currentTarget
+	changed.add(el)
+	while(el.children.length) el.children[0].outerHTML = hasEOL.test(el.textContent) ? '\n' : '\n\n'
+}
 
-	// load any data in hash, if any
-	function load() {
-		if (rows.length) tbody.textContent = '' //reset rows
-		if (location.hash.length > 1) {
-			const data = dec(location.hash.slice(1), QUERY).split('\x00')
-			init.textContent = data.shift()
-			data.forEach( code => { if (code) tbody.append(makeRow(code)) } )
-		}
-		// one last empty line to allow adding new lines
-		tbody.appendChild( makeRow() )
-	}
 
-	init.oninput = save
-	onhashchange = load //TODO add event listener and get lang
-	load()
+// simulation button handler
+$('#run').onclick = () => {
+	const initCode = `import bench from 'https://cdn.skypack.dev/@hugov/bench@0.6.0';${ init.textContent };`
+	const execCode = `()=>bench([${
+		Array.from(rows).slice(0,-1).map( row => `function(){${row.$ids.code.textContent}}` ).join(',\n')
+	}])`
+	const sandbox = frame( execCode, initCode )
+	sandbox.run()
+	.then( res => Array.from(rows).forEach( ({$ids}, i) => $ids.time.update( res[i] ) ) )
+	.catch( err => console.log('error in test', err) )
+	.finally( () => sandbox.end() )
+}
+
+// load
+function loadData(dataString) {
+	if (rows.length) tbody.textContent = '' //reset rows
+	if (dataString) {
+		const data = dataString.split('\x00')
+		init.textContent = data.shift()
+		data.forEach( code => { if (code) tbody.append(makeRow(code)) } )
+	}
+	// one last empty line to allow adding new lines
+	tbody.appendChild( makeRow() )
+}
+
+// save
+const saveData = hashData(loadData)
+
+function save() {
+	const values = [init.textContent]
+	//get all rows but the last
+	for (let i=0; i<rows.length-1; ++i) values.push(rows[i].$ids.code.textContent)
+	saveData( values.join('\x00') )
+}
+
+init.oninput = oninput
+init.onblur = () => {
+	if (!changed.delete(init)) return
+	save()
+}
 </script>
 </body>
