--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<title>schem.ist</title>
 	<meta charset=utf-8>
-	<meta name=viewport content="width=device-width, initial-scale=1.0">
+	<meta name=viewport content="width=device-width">
 	<meta name=description content="schem.ist home">
 	<link rel="stylesheet" href="./_src/main.css">
-	<script type=module src="../_src/lang-pick.js"></script>
+	<script type=module src="./_src/lang-pick.js"></script>
 </head>
 
 <body>
