rename language switcher, share libs

--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -1,32 +1,38 @@
 <!doctype html>
 <html lang=en>
 <head>
-	<title>benchmark</title>
+	<title data-lang>benchmark // banc d'essais</title>
 	<meta charset=utf-8>
 	<meta name=viewport content="width=device-width, initial-scale=1.0">
 	<meta name=description content="in browser benchmarking">
 	<link rel="stylesheet" href="../_src/main.css">
-	<script type=module src="../_src/lang-pick.js"></script>
+	<script type=module src="../_src/data-lang.js"></script>
 </head>
 
 <body>
 
 <div style="display: flex; justify-content: space-between;">
-	<h2><a href="../">&#9884;</a> Javascript Benchmark</h1>
-	<lang-pick>en fr</lang-pick>
+	<h2><a href="../">&#9884;</a> schem.ist - <span data-lang>Javascript Benchmark // Banc d'essais javascript</span></h1>
+	<data-lang>en fr</data-lang>
 </div>
 <hr>
 
 <details>
-	<summary>templates and examples</summary>
-	<li><a href="./#en/12NBII,z8rZIDcox/+x1OzGgmj!pQxew@@ta8c&2y/oqh5F25Mg5yVKRQQKmbvLgY7zT8YcWg)pkS/6b.:'8DI4w+h'2.;8SvKOjGF&S*wz/Tq7C!hBr-Sq/husk2SvIwqVh,n&NRoEJZ~0I=5;(Yc/Y$9F,F4~XVarXDrmku2t0'E,P*j!PJ!t4KLNGzv&?4@uYWiGY1ZmE6.6S-H00681_&A*O,51oCw;_*!P114_T!hf@F@Kga@bZ@U;kK)AB/_8qFSzC:5HTQeakvh9~dVj:&6?S8sbjBG_R'*4mBg63ZC.L=!~8bC~w:-A'RVSk'UEvi@&HoFGv/dRcPSY5zgA~o.bHM:*aK8AK5Li-nErDIKJh464:&ilF)oxaWur3bvf5g(x1D@z2nL_QqCtVfwiC;JDx/zGx56,v/wO*RVQlR.u6Z">
+	<summary data-lang>templates and examples // exemples de modèles</summary>
+	<li data-lang><a lang=en href="./#en/12NBII,z8rZIDcox/+x1OzGgmj!pQxew@@ta8c&2y/oqh5F25Mg5yVKRQQKmbvLgY7zT8YcWg)pkS/6b.:'8DI4w+h'2.;8SvKOjGF&S*wz/Tq7C!hBr-Sq/husk2SvIwqVh,n&NRoEJZ~0I=5;(Yc/Y$9F,F4~XVarXDrmku2t0'E,P*j!PJ!t4KLNGzv&?4@uYWiGY1ZmE6.6S-H00681_&A*O,51oCw;_*!P114_T!hf@F@Kga@bZ@U;kK)AB/_8qFSzC:5HTQeakvh9~dVj:&6?S8sbjBG_R'*4mBg63ZC.L=!~8bC~w:-A'RVSk'UEvi@&HoFGv/dRcPSY5zgA~o.bHM:*aK8AK5Li-nErDIKJh464:&ilF)oxaWur3bvf5g(x1D@z2nL_QqCtVfwiC;JDx/zGx56,v/wO*RVQlR.u6Z">
 		selecting a single element in a tree of 30
+	</a><a lang=fr href="./#fr/12NBII,z8rZIDcox/+x1OzGgmj!pQxew@@ta8c&2y/oqh5F25Mg5yVKRQQKmbvLgY7zT8YcWg)pkS/6b.:'8DI4w+h'2.;8SvKOjGF&S*wz/Tq7C!hBr-Sq/husk2SvIwqVh,n&NRoEJZ~0I=5;(Yc/Y$9F,F4~XVarXDrmku2t0'E,P*j!PJ!t4KLNGzv&?4@uYWiGY1ZmE6.6S-H00681_&A*O,51oCw;_*!P114_T!hf@F@Kga@bZ@U;kK)AB/_8qFSzC:5HTQeakvh9~dVj:&6?S8sbjBG_R'*4mBg63ZC.L=!~8bC~w:-A'RVSk'UEvi@&HoFGv/dRcPSY5zgA~o.bHM:*aK8AK5Li-nErDIKJh464:&ilF)oxaWur3bvf5g(x1D@z2nL_QqCtVfwiC;JDx/zGx56,v/wO*RVQlR.u6Z">
+		selection par attribut d'un élément parmis 40 éléments
 	</a></li>
-	<li><a href="./#en/qOEDwCMgXfD-g@qf!&-B3D6pHsbAyl+yR1k)E&O;*!EkM&om7_enYWZEw2;:mIu9)Ij7/v1w,nLlJ8*Tyn=4*1GvsGtWb;Wd.74(RoR;&@Et,T:a7Z54R*LqlVl2ovlljMu:~G?QOjAOt1Q-67t$C)uf/V-okf@Hhv4VCq?(f9!9-yP@0=hFuvSducNvj!-A2-E@9+K0Gpu.gMmKLQgEZl49V2JkV5es=iGJ'v_86_Hg1!blcdNzM3by1@q6j$E~Rvyxniu/DSv1$?H$HLIjJNXc7fq4(TF2=65-5f76w3ZNH3$wgO(sqOebMqzgq3ch0cNE&ZIpy9@~rDyfk)!Pei$UQdeqG)8&!MIF;9=@W@8!2hy0.Zl5dlw6PHwjvV@3fW_bC2jsY'0sAms7EtgRLxg+.$Y92ZO@a'el9oGRp?4a)iG;l35*r,@s/HUZjqod*&ZT~1yGT">
+	<li data-lang><a lang=en href="./#en/qOEDwCMgXfD-g@qf!&-B3D6pHsbAyl+yR1k)E&O;*!EkM&om7_enYWZEw2;:mIu9)Ij7/v1w,nLlJ8*Tyn=4*1GvsGtWb;Wd.74(RoR;&@Et,T:a7Z54R*LqlVl2ovlljMu:~G?QOjAOt1Q-67t$C)uf/V-okf@Hhv4VCq?(f9!9-yP@0=hFuvSducNvj!-A2-E@9+K0Gpu.gMmKLQgEZl49V2JkV5es=iGJ'v_86_Hg1!blcdNzM3by1@q6j$E~Rvyxniu/DSv1$?H$HLIjJNXc7fq4(TF2=65-5f76w3ZNH3$wgO(sqOebMqzgq3ch0cNE&ZIpy9@~rDyfk)!Pei$UQdeqG)8&!MIF;9=@W@8!2hy0.Zl5dlw6PHwjvV@3fW_bC2jsY'0sAms7EtgRLxg+.$Y92ZO@a'el9oGRp?4a)iG;l35*r,@s/HUZjqod*&ZT~1yGT">
 		selecting elements in a tree of 30
+	</a><a lang=fr href="./#fr/qOEDwCMgXfD-g@qf!&-B3D6pHsbAyl+yR1k)E&O;*!EkM&om7_enYWZEw2;:mIu9)Ij7/v1w,nLlJ8*Tyn=4*1GvsGtWb;Wd.74(RoR;&@Et,T:a7Z54R*LqlVl2ovlljMu:~G?QOjAOt1Q-67t$C)uf/V-okf@Hhv4VCq?(f9!9-yP@0=hFuvSducNvj!-A2-E@9+K0Gpu.gMmKLQgEZl49V2JkV5es=iGJ'v_86_Hg1!blcdNzM3by1@q6j$E~Rvyxniu/DSv1$?H$HLIjJNXc7fq4(TF2=65-5f76w3ZNH3$wgO(sqOebMqzgq3ch0cNE&ZIpy9@~rDyfk)!Pei$UQdeqG)8&!MIF;9=@W@8!2hy0.Zl5dlw6PHwjvV@3fW_bC2jsY'0sAms7EtgRLxg+.$Y92ZO@a'el9oGRp?4a)iG;l35*r,@s/HUZjqod*&ZT~1yGT">
+		selection par attribut d'un groupe d'éléments parmis 40 éléments
 	</a></li>
-	<li><a href="./#en/gca.GqkJvWPFe,z=uGO$**AW,uXYv&d?5X8IT??-Z/;DxQxyq6E?3jH!MOMWmTCDL1/qvCIi;qBCR(wsO:Ya1y6qo*(YYm8l&uqMwjQ_..kA*2Ht_@fQCw6L=ro1-7k0LbJR(aR11b/d~=WS?&0=$F2Xn4WB9k&Bm?'rj6trSE,sKD@u~fWTRz-y(5pn$~jqNryvTO8_P*x;e@6F2D~.qL'!+8f0)A;S1DNs=,4b!cxY@zX$;0bJQ)G)9Gh~nZBIoLCDM5Xp*ie:bgdyC~N)fg0&9Tg4J83Q_W3">
+	<li data-lang><a lang=en href="./#en/gca.GqkJvWPFe,z=uGO$**AW,uXYv&d?5X8IT??-Z/;DxQxyq6E?3jH!MOMWmTCDL1/qvCIi;qBCR(wsO:Ya1y6qo*(YYm8l&uqMwjQ_..kA*2Ht_@fQCw6L=ro1-7k0LbJR(aR11b/d~=WS?&0=$F2Xn4WB9k&Bm?'rj6trSE,sKD@u~fWTRz-y(5pn$~jqNryvTO8_P*x;e@6F2D~.qL'!+8f0)A;S1DNs=,4b!cxY@zX$;0bJQ)G)9Gh~nZBIoLCDM5Xp*ie:bgdyC~N)fg0&9Tg4J83Q_W3">
 		iterating through object keys and values
+	</a><a lang=fr href="./#fr/gca.GqkJvWPFe,z=uGO$**AW,uXYv&d?5X8IT??-Z/;DxQxyq6E?3jH!MOMWmTCDL1/qvCIi;qBCR(wsO:Ya1y6qo*(YYm8l&uqMwjQ_..kA*2Ht_@fQCw6L=ro1-7k0LbJR(aR11b/d~=WS?&0=$F2Xn4WB9k&Bm?'rj6trSE,sKD@u~fWTRz-y(5pn$~jqNryvTO8_P*x;e@6F2D~.qL'!+8f0)A;S1DNs=,4b!cxY@zX$;0bJQ)G)9Gh~nZBIoLCDM5Xp*ie:bgdyC~N)fg0&9Tg4J83Q_W3">
+		iteration sur l'ensemble des clés et valeurs d'un objet
 	</a></li>
 </details>
 
@@ -38,19 +44,24 @@
 </colgroup>
 <thead>
 	<tr>
-		<th>imports and setup</th>
+		<th data-lang>imports and setup // imports et initialisation</th>
 	</tr>
 	<tr>
 		<td>
 			<pre><code id=init contenteditable=true></code></pre>
 		</td>
 		<td style="text-align: center; vertical-align: middle;">
-			<button id=run >run tests!<br> (takes a few seconds)</button>
+			<button id=run data-lang>
+				<span lang=en>run tests!<br>(takes a few seconds)</span>
+				<span lang=fr>exécution!<br>(quelques secondes)</span>
+			</button>
 		</td>
 	</tr>
 	<tr>
 		<th>code</th>
-		<th style="text-align: center; vertical-align: middle;">result in nanoseconds Q25-Q75</th>
+		<th style="text-align: center; vertical-align: middle;" data-lang>
+			result in nanoseconds Q25-Q75 // résultats en nanosecondes Q25-Q75
+		</th>
 	</tr>
 </thead>
 
@@ -68,8 +79,8 @@
 
 <script type=module>
 
-import {cast, list, frame, $, $$} from '../_src/inhtml.js'
-import hashData from './hash-data.js'
+import {cast, frame, $, $$} from '../_src/inhtml.js'
+import hashData from '../_src/hash-data.js'
 
 const init = $('#init'),
 			tbody = $('tbody'),
@@ -104,7 +115,7 @@ function oninput(evt) {
 
 // simulation button handler
 $('#run').onclick = () => {
-	const initCode = `import bench from 'https://cdn.skypack.dev/@hugov/bench@0.6.0';${ init.textContent };`
+	const initCode = `import bench from 'https://cdn.skypack.dev/@hugov/bench@0.7.0';${ init.textContent };`
 	const execCode = `()=>bench([${
 		Array.from(rows).slice(0,-1).map( row => `function(){${row.$ids.code.textContent}}` ).join(',\n')
 	}])`
