--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 	<meta name=viewport content="width=device-width">
 	<meta name=description content="schem.ist home">
 	<link rel="stylesheet" href="./_src/main.css">
-	<script type=module src="./_src/lang-pick.js"></script>
+	<script type=module src="./_src/data-lang.js"></script>
 </head>
 
 <body>
 
 <div style="display: flex; justify-content: space-between;">
 	<h2><a href="../">&#9884;</a> schem.ist</h2>
-	<lang-pick>en fr</lang-pick>
+	<data-lang>en fr</data-lang>
 </div>
 <hr>
 <blockquote data-lang>misc. experiments and code // petits projets divers</blockquote>
