--- a/index.html
+++ b/index.html
@@ -12,17 +12,29 @@
 <body>
 
 <div style="display: flex; justify-content: space-between;">
-	<h2><a href="../">&#9884;</a> schem.ist</h2>
+	<h2><a href="./">&#9884;</a> schem.ist</h2>
 	<data-lang>en fr</data-lang>
 </div>
 <hr>
 <blockquote data-lang>misc. experiments and code // petits projets divers</blockquote>
 <ul>
+	<li><time>2021-05-16</time>
+		<span data-lang>
+			<span lang=en><a href="./404.html#en">404</a> page</span>
+			<span lang=fr>page <a href="./404.html#fr">404</a></span>
+		</span>
+	</li>
+	<li><time>2021-05-16</time>
+		<span data-lang>
+			<span lang=en>first draft of a <a href="./montecode/index.html#en">monte carlo</a> simulation engine with in-URL saving and loading</span>
+			<span lang=fr>première ébauche de simulations <a href="./montecode/index.html#fr">monte carlo</a> avec chargement et sauvegarde par signet <abbr>URI</abbr></span>
+		</span>
+	</li>
 	<li><time>2021-05-08</time> <span data-lang>language selector // interface multilingue avec selecteur</span></li>
 	<li><time>2021-05-05</time>
 		<span data-lang>
-			<span lang=en>a no frills <a href="./publicbench/">benchmark</a> app with in-URL saving and loading</span>
-			<span lang=fr><a href="./publicbench/">banc d'essais</a> de performance avec chargement et sauvegarde par signet <abbr>URI</abbr></span>
+			<span lang=en>a no frills <a href="./publicbench/index.html#en">benchmark</a> app with in-URL saving and loading</span>
+			<span lang=fr><a href="./publicbench/index.html#fr">banc d'essais</a> de performance avec chargement et sauvegarde par signet <abbr>URI</abbr></span>
 		</span>
 	</li>
 </ul>
