--- a/montecode/index.html
+++ b/montecode/index.html
@@ -63,9 +63,9 @@
 
 <script type=module>
 
-import {cast, $, $$} from '../_src/inhtml.js'
+import {cast, $, $$} from '/_npm/@hugov.inhtml.js'
 import hashData from '../_src/hash-data.js'
-import SIM from 'https://cdn.skypack.dev/@hugov/correl-range@0.1.0'
+import SIM from '/_npm/@hugov.correl-range.js'
 import editable from '../_src/editable.js'
 import parse from './parse.js'
 
