shorter-string update

--- a/montecode/index.html
+++ b/montecode/index.html
@@ -19,9 +19,11 @@
 
 <details>
 	<summary data-lang>templates and examples // exemples de modèles</summary>
-	<li data-lang><a lang=en href="./#en/1*Kie0U9Kd0O,g7!nrR_QP4b+FEPlz,XEpV8gz=Ewc!os$7ilHx'CITw3u3*f5(sySzudR3Ox(n6oNtjnk=byGjUb_y7.KwJLzi8-=,Bm+.jGD">
+	<li data-lang>
+		<a lang=en href="./#en/3c4*$zy)S1TDhu*AnHVFW2z_J1M5sL6-H+4/!8j/nQ~a7,KnALz?+)@yf&yk+&geD)KqkmbZ,&rvl)=5BnTN*JHMPb+pm(2RIKda1">
 		variable rate and duration investment
-	</a><a lang=fr href="./#fr/1*Kie0U9Kd0O,g7!nrR_QP4b+FEPlz,XEpV8gz=Ewc!os$7ilHx'CITw3u3*f5(sySzudR3Ox(n6oNtjnk=byGjUb_y7.KwJLzi8-=,Bm+.jGD">
+		</a>
+		<a lang=fr href="./#fr/3c4*$zy)S1TDhu*AnHVFW2z_J1M5sL6-H+4/!8j/nQ~a7,KnALz?+)@yf&yk+&geD)KqkmbZ,&rvl)=5BnTN*JHMPb+pm(2RIKda1">
 		investissement à durée et rendement variable
 	</a></li>
 </details>
