--- a/publicbench/index.html
+++ b/publicbench/index.html
@@ -19,21 +19,27 @@
 
 <details>
 	<summary data-lang>templates and examples // exemples de modèles</summary>
-	<li data-lang><a lang=en href="./#en/12NBII,z8rZIDcox/+x1OzGgmj!pQxew@@ta8c&2y/oqh5F25Mg5yVKRQQKmbvLgY7zT8YcWg)pkS/6b.:'8DI4w+h'2.;8SvKOjGF&S*wz/Tq7C!hBr-Sq/husk2SvIwqVh,n&NRoEJZ~0I=5;(Yc/Y$9F,F4~XVarXDrmku2t0'E,P*j!PJ!t4KLNGzv&?4@uYWiGY1ZmE6.6S-H00681_&A*O,51oCw;_*!P114_T!hf@F@Kga@bZ@U;kK)AB/_8qFSzC:5HTQeakvh9~dVj:&6?S8sbjBG_R'*4mBg63ZC.L=!~8bC~w:-A'RVSk'UEvi@&HoFGv/dRcPSY5zgA~o.bHM:*aK8AK5Li-nErDIKJh464:&ilF)oxaWur3bvf5g(x1D@z2nL_QqCtVfwiC;JDx/zGx56,v/wO*RVQlR.u6Z">
+	<li data-lang>
+		<a lang=en href="./#en/JoY@AB$I:F4c3m9mU-5A2XX5F3hMh;G.$_9=4rgPz3ZWUy$r!O_tyEuK=_dP8?HR0+r,zjcA7KRu:NxoorI&XVGe0VaT_Qk/7tJ5+aaCi0lXW2Oq0NYF&_=:sV3AveFBrrZLnWh!xlA@MWJfqjiGwufB,ptwTfHkl1nWyZbAt)=jL_6_jcWdbjRnM5=y~EpRF6IgVJ4Kwqk.7KJA3oi4q9QY~azkUht~Qx!Z(D/b23;D1E$:0t//9ED&isHKov,7m;vPBD!W6j@baRYk,@dy=DEBSC*lu_b5q@v~xitn4bO!1nTCd*_Do3+emA,!TR$x&v;+VNH*9GkKIEXvtAracz:_jEqYGnh$rS0H:EZ42h3LZk(NbXH33:lZRyWFLSn&4YRshcDU@b$*P-IKpLn,*LL37$=p8DgyJS=">
 		selecting a single element in a tree of 30
-	</a><a lang=fr href="./#fr/12NBII,z8rZIDcox/+x1OzGgmj!pQxew@@ta8c&2y/oqh5F25Mg5yVKRQQKmbvLgY7zT8YcWg)pkS/6b.:'8DI4w+h'2.;8SvKOjGF&S*wz/Tq7C!hBr-Sq/husk2SvIwqVh,n&NRoEJZ~0I=5;(Yc/Y$9F,F4~XVarXDrmku2t0'E,P*j!PJ!t4KLNGzv&?4@uYWiGY1ZmE6.6S-H00681_&A*O,51oCw;_*!P114_T!hf@F@Kga@bZ@U;kK)AB/_8qFSzC:5HTQeakvh9~dVj:&6?S8sbjBG_R'*4mBg63ZC.L=!~8bC~w:-A'RVSk'UEvi@&HoFGv/dRcPSY5zgA~o.bHM:*aK8AK5Li-nErDIKJh464:&ilF)oxaWur3bvf5g(x1D@z2nL_QqCtVfwiC;JDx/zGx56,v/wO*RVQlR.u6Z">
-		selection par attribut d'un élément parmis 40 éléments
+		</a>
+		<a lang=fr href="./#fr/JoY@AB$I:F4c3m9mU-5A2XX5F3hMh;G.$_9=4rgPz3ZWUy$r!O_tyEuK=_dP8?HR0+r,zjcA7KRu:NxoorI&XVGe0VaT_Qk/7tJ5+aaCi0lXW2Oq0NYF&_=:sV3AveFBrrZLnWh!xlA@MWJfqjiGwufB,ptwTfHkl1nWyZbAt)=jL_6_jcWdbjRnM5=y~EpRF6IgVJ4Kwqk.7KJA3oi4q9QY~azkUht~Qx!Z(D/b23;D1E$:0t//9ED&isHKov,7m;vPBD!W6j@baRYk,@dy=DEBSC*lu_b5q@v~xitn4bO!1nTCd*_Do3+emA,!TR$x&v;+VNH*9GkKIEXvtAracz:_jEqYGnh$rS0H:EZ42h3LZk(NbXH33:lZRyWFLSn&4YRshcDU@b$*P-IKpLn,*LL37$=p8DgyJS=">
+		selection par attribut d'un élément parmis 30 éléments
 	</a></li>
-	<li data-lang><a lang=en href="./#en/qOEDwCMgXfD-g@qf!&-B3D6pHsbAyl+yR1k)E&O;*!EkM&om7_enYWZEw2;:mIu9)Ij7/v1w,nLlJ8*Tyn=4*1GvsGtWb;Wd.74(RoR;&@Et,T:a7Z54R*LqlVl2ovlljMu:~G?QOjAOt1Q-67t$C)uf/V-okf@Hhv4VCq?(f9!9-yP@0=hFuvSducNvj!-A2-E@9+K0Gpu.gMmKLQgEZl49V2JkV5es=iGJ'v_86_Hg1!blcdNzM3by1@q6j$E~Rvyxniu/DSv1$?H$HLIjJNXc7fq4(TF2=65-5f76w3ZNH3$wgO(sqOebMqzgq3ch0cNE&ZIpy9@~rDyfk)!Pei$UQdeqG)8&!MIF;9=@W@8!2hy0.Zl5dlw6PHwjvV@3fW_bC2jsY'0sAms7EtgRLxg+.$Y92ZO@a'el9oGRp?4a)iG;l35*r,@s/HUZjqod*&ZT~1yGT">
+	<li data-lang>
+		<a lang=en href="./#en/1QlKNCwu?FO_PdH/AHjaAs.sB69~aJLV*2SxxtV?EtNo2J3GuDsuI(Ek0OW~0&(i!/7wwB1L-uZAg;/YRp6DFNtrSef,,Cgf;cV;BoW.wi,xX(@Sj*!phA5LdCHO6qX~vW;qy6+B?_q2F3,k_K$VTEJ)FQmny@3y:H4mu&N4AGkPm+3V6@JYGZa9_sCiZ&68IBYl6WcC$;X5g~GJ_Z5mgAyeEmf=hoTU9MMLlvzaIpIJKbiABA*vYA/J,!c0~GQ7.DXm0=-zIUk*=b_C)R9-DbB;Tou2?_mf0n(dp~A*aRGlCX7(Oc?M_X3Iz~;fI;+XR;tMg,S5sSczr_UBR67$5:,_5J;zvK7.kgf&wP6FY~8b+K(a=E@1x&j3@y+aBh0S)!D-1-*!*qE,tI9=4X=pveg**BV-T)n(yw67oyqyc4*)5Q!H$20F$jJIr~0">
 		selecting elements in a tree of 30
-	</a><a lang=fr href="./#fr/qOEDwCMgXfD-g@qf!&-B3D6pHsbAyl+yR1k)E&O;*!EkM&om7_enYWZEw2;:mIu9)Ij7/v1w,nLlJ8*Tyn=4*1GvsGtWb;Wd.74(RoR;&@Et,T:a7Z54R*LqlVl2ovlljMu:~G?QOjAOt1Q-67t$C)uf/V-okf@Hhv4VCq?(f9!9-yP@0=hFuvSducNvj!-A2-E@9+K0Gpu.gMmKLQgEZl49V2JkV5es=iGJ'v_86_Hg1!blcdNzM3by1@q6j$E~Rvyxniu/DSv1$?H$HLIjJNXc7fq4(TF2=65-5f76w3ZNH3$wgO(sqOebMqzgq3ch0cNE&ZIpy9@~rDyfk)!Pei$UQdeqG)8&!MIF;9=@W@8!2hy0.Zl5dlw6PHwjvV@3fW_bC2jsY'0sAms7EtgRLxg+.$Y92ZO@a'el9oGRp?4a)iG;l35*r,@s/HUZjqod*&ZT~1yGT">
-		selection par attribut d'un groupe d'éléments parmis 40 éléments
+		</a>
+		<a lang=fr href="./#fr/1QlKNCwu?FO_PdH/AHjaAs.sB69~aJLV*2SxxtV?EtNo2J3GuDsuI(Ek0OW~0&(i!/7wwB1L-uZAg;/YRp6DFNtrSef,,Cgf;cV;BoW.wi,xX(@Sj*!phA5LdCHO6qX~vW;qy6+B?_q2F3,k_K$VTEJ)FQmny@3y:H4mu&N4AGkPm+3V6@JYGZa9_sCiZ&68IBYl6WcC$;X5g~GJ_Z5mgAyeEmf=hoTU9MMLlvzaIpIJKbiABA*vYA/J,!c0~GQ7.DXm0=-zIUk*=b_C)R9-DbB;Tou2?_mf0n(dp~A*aRGlCX7(Oc?M_X3Iz~;fI;+XR;tMg,S5sSczr_UBR67$5:,_5J;zvK7.kgf&wP6FY~8b+K(a=E@1x&j3@y+aBh0S)!D-1-*!*qE,tI9=4X=pveg**BV-T)n(yw67oyqyc4*)5Q!H$20F$jJIr~0">
+		selection par attribut d'un groupe d'éléments parmis 30 éléments
 	</a></li>
-	<li data-lang><a lang=en href="./#en/gca.GqkJvWPFe,z=uGO$**AW,uXYv&d?5X8IT??-Z/;DxQxyq6E?3jH!MOMWmTCDL1/qvCIi;qBCR(wsO:Ya1y6qo*(YYm8l&uqMwjQ_..kA*2Ht_@fQCw6L=ro1-7k0LbJR(aR11b/d~=WS?&0=$F2Xn4WB9k&Bm?'rj6trSE,sKD@u~fWTRz-y(5pn$~jqNryvTO8_P*x;e@6F2D~.qL'!+8f0)A;S1DNs=,4b!cxY@zX$;0bJQ)G)9Gh~nZBIoLCDM5Xp*ie:bgdyC~N)fg0&9Tg4J83Q_W3">
+	<li data-lang>
+		<a lang=en href="./#en/z00zL:d&&mR9DWoQfW;ncXp,HSt3gi!FH/o;CE2,pYVg+uf:gzxH0Ra3O5+o;-WAtLv4i;r+DKpjycH(A8ZFR:v7w(O_LpKl&4Xqnk9&j_ckcOxlb(q=mDQfMw7)5jB2TscBI/-;~0m)AkJvEUIV4!qpzoxnx&Ev.k:d&.)g~U,GYOw4JiSr)7e9gp(Qgnq=c7t-gUwK?i9WNuSvK@qxMsxryMmAOcW_N$b4;!(m-b?Pq0t5kM3s7.7~3hdoikYaA+30tSfuHGW0fssP*3H0">
 		iterating through object keys and values
-	</a><a lang=fr href="./#fr/gca.GqkJvWPFe,z=uGO$**AW,uXYv&d?5X8IT??-Z/;DxQxyq6E?3jH!MOMWmTCDL1/qvCIi;qBCR(wsO:Ya1y6qo*(YYm8l&uqMwjQ_..kA*2Ht_@fQCw6L=ro1-7k0LbJR(aR11b/d~=WS?&0=$F2Xn4WB9k&Bm?'rj6trSE,sKD@u~fWTRz-y(5pn$~jqNryvTO8_P*x;e@6F2D~.qL'!+8f0)A;S1DNs=,4b!cxY@zX$;0bJQ)G)9Gh~nZBIoLCDM5Xp*ie:bgdyC~N)fg0&9Tg4J83Q_W3">
+		</a>
+		<a lang=fr href="./#fr/z00zL:d&&mR9DWoQfW;ncXp,HSt3gi!FH/o;CE2,pYVg+uf:gzxH0Ra3O5+o;-WAtLv4i;r+DKpjycH(A8ZFR:v7w(O_LpKl&4Xqnk9&j_ckcOxlb(q=mDQfMw7)5jB2TscBI/-;~0m)AkJvEUIV4!qpzoxnx&Ev.k:d&.)g~U,GYOw4JiSr)7e9gp(Qgnq=c7t-gUwK?i9WNuSvK@qxMsxryMmAOcW_N$b4;!(m-b?Pq0t5kM3s7.7~3hdoikYaA+30tSfuHGW0fssP*3H0">
 		iteration sur l'ensemble des clés et valeurs d'un objet
-	</a></li>
+		</a></li>
 </details>
 
 <table>
@@ -122,7 +128,7 @@ $('#run').onclick = () => {
 const saveData = hashData(dataString => {
 	if (rows.length) tbody.textContent = '' //reset rows
 	if (dataString) {
-		const data = dataString.split('\x00')
+		const data = dataString.split('\v') //vertial tab as seperator
 		init.textContent = data.shift()
 		data.forEach( code => { if (code) tbody.append(makeRow(code)) } )
 	}
@@ -135,7 +141,7 @@ function save() {
 	const values = [init.textContent]
 	//get all rows but the last
 	for (let i=0; i<rows.length-1; ++i) values.push(rows[i].$ids.code.textContent)
-	saveData( values.join('\x00') )
+	saveData( values.join('\v') )
 }
 editable(init)
 init.onchange = save
